--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.16.0",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.3",
     "next": "14.2.3",
     "react": "^18",
