--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-table": "^8.16.0",
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.3",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
