--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.3",
     "jwt-decode": "^4.0.0",
+    "ldrs": "^1.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-toastify": "^10.0.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
